# cora

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile.cpp-env-ubuntu  README.md  conanfile.py  design_decisions.md  pyproject.toml
.github/workflows/: release_build.yaml  ubuntu_20_04.yaml  ubuntu_latest.yaml
bindings/: CMakeLists.txt  README.md  cora.pyi  cora_bindings.cpp  example_pack_x0.py  example_solve_expand.py  install.md  install_cora_python.sh  module.cpp  run_bindings_test.py  test_bindings.py
examples/: CMakeLists.txt  config.json  cora_vis_test.cpp  data_viz.py  example_solve_expand.cpp  experiment_notes.md  factor_graph_small.pyfg  main.cpp  paper_experiments.cpp  python_example.py
examples/data/: marine_two_robots.pyfg  plaza1.pyfg  plaza2.pyfg  single_drone.pyfg  tiers.pyfg
examples/data/mrclam/: mrclam3b.pyfg  mrclam5a.pyfg  mrclam6.pyfg
examples/data/mrclam/range_and_rpm/: mrclam3b.pyfg  mrclam5a.pyfg  mrclam6.pyfg
examples/data/mrclam/range_and_rpm/mrclam3b/: mrclam3b.pyfg
examples/data/mrclam/range_and_rpm/mrclam5a/: mrclam5a.pyfg
examples/data/mrclam/range_and_rpm/mrclam6/: mrclam6.pyfg
examples/data/mrclam/range_only/: mrclam6.pyfg
examples/data/mrclam/range_only/mrclam3b/: mrclam3b.pyfg
examples/data/mrclam/range_only/mrclam5a/: mrclam5a.pyfg
include/CORA/: CORA.h  CORA_preconditioners.h  CORA_problem.h  CORA_test_utils.h  CORA_types.h  CORA_utils.h  CORA_variable_management.h  CORA_vis.h  MatrixManifold.h  Measurements.h  ObliqueManifold.h  StiefelProduct.h  Symbol.h  pyfg_text_parser.h
run_utils/: increment_init_rank.bash  parse_data.py  run_experiments.bash  toggle_formulation.bash  toggle_init.bash
src/: CORA.cpp  CORA_preconditioners.cpp  CORA_problem.cpp  CORA_test_utils.cpp  CORA_utils.cpp  CORA_variable_management.cpp  CORA_vis.cpp  ObliqueManifold.cpp  StiefelProduct.cpp  Symbol.cpp  pyfg_text_parser.cpp  python_bindings.cpp
tests/: CMakeLists.txt  test.cpp  test_certification.cpp  test_construct_problem.cpp  test_cora.cpp  test_geometry.cpp  test_optimizer_helpers.cpp  test_parse_pyfg.cpp  test_utils.cpp  test_utils.h
tests/data/single_range/: Arange.mm  DataMatrix.mm  OmegaPose.mm  OmegaRange.mm  RangeDistances.mm  RotConLaplacian.mm  S_rand.mm  T.mm  X_odom.mm  X_rand_dim2.mm  expected_egrad.mm  expected_rgrad.mm  factor_graph.pyfg  hessProd.mm  rand_dX.mm
tests/data/single_rpm/: DataMatrix.mm  OmegaPose.mm  RotConLaplacian.mm  S_rand.mm  T.mm  X_gt.mm  X_odom.mm  X_rand_dim2.mm  expected_egrad.mm  expected_rgrad.mm  factor_graph.pyfg  hessProd.mm  rand_dX.mm
tests/data/small_ra_slam_problem/: Apose.mm  Arange.mm  DataMatrix.mm  OmegaRange.mm  RangeDistances.mm  RotConLaplacian.mm  S_rand.mm  T.mm  X_gt.mm  X_odom.mm  X_rand_dim2.mm  expected_egrad.mm  expected_rgrad.mm  hessProd.mm  rand_dX.mm
